--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:theme="@style/Theme.CS_5520_Final"
         tools:targetApi="31">
 
-        <!-- MainActivity is the entry point of the app -->
+        <!-- Set LoginActivity as the launcher activity -->
         <activity
-            android:name=".MainActivity"
+            android:name=".view.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +24,20 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".PasswordResetActivity" />
+        <!-- HomeActivity -->
+        <activity
+            android:name=".view.HomeActivity"
+            android:exported="false" />
 
+        <!-- PasswordResetActivity -->
+        <activity
+            android:name=".view.PasswordResetActivity"
+            android:exported="false" />
 
+        <!-- MainActivity (no longer the launcher activity) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
